# CHIP-8-Virtual-Machine-Core

./: .gitignore  CMakeLists.txt  LICENSE.txt
include/chip8core/: Emulator.h
include/chip8emu/: Emulator.h
src/: Emulator.cc  compiler.cc  decompiler.cc
test/: 3584B.txt  3585B.txt  test_emulator_fetch_opcode.cc  test_emulator_handle_opcode.cc  test_emulator_init.cc  test_emulator_load_file_to_ram.cc
